# QPINNS

./: README.md  ROADMAP.md  plot_compare.py  pyproject.toml
experiments/noise_phase1_existing/: phase1_results.json
experiments/noise_rescue/te_ft_p001/: best_model.pth  best_val_model.pth  config.json  final_model.pth  rescue_results.json
qcpinn/: __init__.py  __main__.py  circuits.py  cross_noise.py  datasets.py  embedding.py  evaluation.py  hardware.py  pde.py  run.py  solver.py  trainer.py
qml_demo_noisy_and_qpu/: test_ibm.py  test_ionq_sim.ipynb  test_noisy_sim.py  test_noisy_sim_alt.py
runs/Repeat_run_1/: best_model.pth  best_val_model.pth  config.json  final_model.pth
runs/Repeat_run_2/: best_model.pth  best_val_model.pth  config.json  final_model.pth
runs/TE_high_res/: best_model.pth  best_val_model.pth  config.json  final_model.pth
runs/TE_no_tanh/: best_model.pth  best_val_model.pth  config.json  final_model.pth
runs/TE_run_1/: best_model.pth  best_val_model.pth  config.json  final_model.pth
runs/TE_run_2/: best_model.pth  best_val_model.pth  config.json  final_model.pth
runs/TE_run_3/: best_model.pth  best_val_model.pth  config.json  final_model.pth
scripts/: analyze_postprocessor_gain.py  fine_tune_checkpoint.py  full_comparison.py  hardware_grid_report.py  heat_te_comparison.py  noise_rescue.py  noise_robustness.py  optuna_hpo_helmholtz.py  orchestrate_experiments.sh  paper_reproduction.py  qpu_three_tier.py  spatial_smooth_hardware_results.py  te_comparison.py
tests/: test_all.py
(+30 files in other folders)
